; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_color-key-filter.c_color_key_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_color-key-filter.c_color_key_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.color_key_filter_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @color_key_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @color_key_update(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.color_key_filter_data*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.color_key_filter_data*
  store %struct.color_key_filter_data* %7, %struct.color_key_filter_data** %5, align 8
  %8 = load %struct.color_key_filter_data*, %struct.color_key_filter_data** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @color_settings_update(%struct.color_key_filter_data* %8, i32* %9)
  %11 = load %struct.color_key_filter_data*, %struct.color_key_filter_data** %5, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @key_settings_update(%struct.color_key_filter_data* %11, i32* %12)
  ret void
}

declare dso_local i32 @color_settings_update(%struct.color_key_filter_data*, i32*) #1

declare dso_local i32 @key_settings_update(%struct.color_key_filter_data*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
